# Scraping_with_Scrapy

./: README.md  config.ini  pyproject.toml
